Simplify the design of the geocoder (#563)
* Simplify the design of the geocoder

* Close the resources

* Revert some changes

* Format with spotless